--- a/.github/workflows/load_data.yml
+++ b/.github/workflows/load_data.yml
@@ -27,4 +27,4 @@ jobs:
     - name: Login to WandB
       run: wandb login ${{ secrets.WANDB_API_KEY }}
     - name: Run load.py
-      run: python src/data/load.py --IdExecution ${{ github.run_number }}
+      run: python src/data/load.py --IdExecution ${{ github.run_number }} #kEVIN
